BPER/DEVF/force-app/main/default/objects/CRM_Channel__c/CRM_Channel__c.object-meta.xml
<CustomObject>
    <description>Multicanalità</description>
    <label>Servizio digitale</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Nome Channel</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Servizi digitali</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>