BPER/DEVF/force-app/main/default/objects/CRM_Channel__c/fields/Blocco_per_DOC_scaduto__c.field-meta.xml
<CustomField>
    <fullName>Blocco_per_DOC_scaduto__c</fullName>
    <formula>CRM_Account__r.CC_BloccoNPM__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Blocco per DOC scaduto</label>
    <type>Checkbox</type>
</CustomField>