BPER/DEVF/force-app/main/default/objects/CRM_Channel__c/fields/CC_Bank__c.field-meta.xml
<CustomField>
    <fullName>CC_Bank__c</fullName>
    <formula>CRM_Account__r.CRM_BancaToDisplay__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Banca</label>
    <type>Text</type>
</CustomField>