BPER/DEVF/force-app/main/default/objects/CRM_Channel__c/fields/CC_BirthCity__c.field-meta.xml
<CustomField>
    <fullName>CC_BirthCity__c</fullName>
    <formula>CRM_Account__r.CRM_BirthCity__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Luogo di nascita</label>
    <type>Text</type>
</CustomField>