BPER/DEVF/force-app/main/default/objects/CRM_Channel__c/fields/CC_Birthday__c.field-meta.xml
<CustomField>
    <fullName>CC_Birthday__c</fullName>
    <formula>CRM_Account__r.CRM_StringBirthDate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Data di nascita</label>
    <type>Text</type>
</CustomField>