BPER/DEVF/force-app/main/default/objects/CRM_Channel__c/fields/CC_Filiale__c.field-meta.xml
<CustomField>
    <fullName>CC_Filiale__c</fullName>
    <formula>CRM_Account__r.CRM_FilialeToDisplay__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Filiale</label>
    <type>Text</type>
</CustomField>