BPER/DEVF/force-app/main/default/objects/CRM_Channel__c/fields/CC_Modello_di_Servizio__c.field-meta.xml
<CustomField>
    <fullName>CC_Modello_di_Servizio__c</fullName>
    <formula>TEXT(CRM_Account__r.ModelloDiServizio__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Modello di Servizio</label>
    <type>Text</type>
</CustomField>