BPER/DEVF/force-app/main/default/objects/CRM_Channel__c/fields/CC_NDG__c.field-meta.xml
<CustomField>
    <fullName>CC_NDG__c</fullName>
    <formula>CRM_Account__r.CRM_NDG__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>NDG</label>
    <type>Text</type>
</CustomField>