BPER/DEVF/force-app/main/default/objects/CRM_Channel__c/fields/CRM_Account__c.field-meta.xml
<CustomField>
    <fullName>CRM_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cliente</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Channel</relationshipName>
    <type>Lookup</type>
</CustomField>