BPER/DEVF/force-app/main/default/objects/CRM_Channel__c/fields/CRM_Alias__c.field-meta.xml
<CustomField>
    <fullName>CRM_Alias__c</fullName>
    <description>Alias</description>
    <encryptionScheme>CaseInsensitiveDeterministicEncryption</encryptionScheme>
    <label>Alias</label>
    <length>255</length>
    <type>Text</type>
</CustomField>