BPER/DEVF/force-app/main/default/objects/CRM_Channel__c/fields/CRM_CBIStatus__c.field-meta.xml
<CustomField>
    <fullName>CRM_CBIStatus__c</fullName>
    <label>CBI Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Passive</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>