BPER/DEVF/force-app/main/default/objects/CRM_Channel__c/fields/CRM_Email__c.field-meta.xml
<CustomField>
    <fullName>CRM_Email__c</fullName>
    <description>Indirizzo mail associato a Smart Web</description>
    <encryptionScheme>CaseInsensitiveDeterministicEncryption</encryptionScheme>
    <label>Email</label>
    <type>Email</type>
</CustomField>