BPER/DEVF/force-app/main/default/objects/CRM_Channel__c/fields/CRM_Fee__c.field-meta.xml
<CustomField>
    <fullName>CRM_Fee__c</fullName>
    <description>Canone</description>
    <label>Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>