BPER/DEVF/force-app/main/default/objects/CRM_Channel__c/fields/CRM_KeyWord__c.field-meta.xml
<CustomField>
    <fullName>CRM_KeyWord__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Key word</label>
    <length>255</length>
    <type>Text</type>
</CustomField>