BPER/DEVF/force-app/main/default/objects/CRM_Channel__c/fields/CRM_LastAccessChannel__c.field-meta.xml
<CustomField>
    <fullName>CRM_LastAccessChannel__c</fullName>
    <description>Canale ultimo accesso</description>
    <label>Last Access Channel</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Mobile</fullName>
            </value>
            <value>
                <fullName>Internet banking private</fullName>
            </value>
            <value>
                <fullName>Mixed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>