BPER/DEVF/force-app/main/default/objects/CRM_Channel__c/fields/CRM_LastAccessDate__c.field-meta.xml
<CustomField>
    <fullName>CRM_LastAccessDate__c</fullName>
    <description>Date e ora ultimo accesso</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Last Access Date</label>
    <type>Date</type>
</CustomField>