BPER/DEVF/force-app/main/default/objects/CRM_Channel__c/fields/CRM_LastAccessTime__c.field-meta.xml
<CustomField>
    <fullName>CRM_LastAccessTime__c</fullName>
    <label>Last Access Time</label>
    <type>Time</type>
</CustomField>