BPER/DEVF/force-app/main/default/objects/CRM_Channel__c/fields/CRM_MediaaccessiMO__c.field-meta.xml
<CustomField>
    <fullName>CRM_MediaaccessiMO__c</fullName>
    <label>Media accessi Smart Mobile</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>