BPER/DEVF/force-app/main/default/objects/CRM_Channel__c/fields/CRM_MediaaccessiTB__c.field-meta.xml
<CustomField>
    <fullName>CRM_MediaaccessiTB__c</fullName>
    <label>Media accessi Tablet</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>