BPER/DEVF/force-app/main/default/objects/CRM_Channel__c/fields/CRM_OnlineMailingStatus__c.field-meta.xml
<CustomField>
    <fullName>CRM_OnlineMailingStatus__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Stato posta online</description>
    <label>Online Mailing Status</label>
    <type>Checkbox</type>
</CustomField>