BPER/DEVF/force-app/main/default/objects/CRM_Channel__c/fields/CRM_PaperAccountStatementStatus__c.field-meta.xml
<CustomField>
    <fullName>CRM_PaperAccountStatementStatus__c</fullName>
    <description>Ricezione estratto conto cartaceo</description>
    <label>Paper Account Statement Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Online</fullName>
            </value>
            <value>
                <fullName>Paper</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>