BPER/DEVF/force-app/main/default/objects/CRM_Channel__c/fields/CRM_Phone__c.field-meta.xml
<CustomField>
    <fullName>CRM_Phone__c</fullName>
    <description>Numero di telefono associato a Smart Web</description>
    <encryptionScheme>CaseInsensitiveDeterministicEncryption</encryptionScheme>
    <label>Phone</label>
    <type>Phone</type>
</CustomField>