BPER/DEVF/force-app/main/default/objects/CRM_Channel__c/fields/CRM_ProfileTypology__c.field-meta.xml
<CustomField>
    <fullName>CRM_ProfileTypology__c</fullName>
    <description>Tipologia Profilo</description>
    <label>Profile typology</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Dispo</fullName>
            </value>
            <value>
                <fullName>Info</fullName>
            </value>
            <value>
                <fullName>Informativo</fullName>
            </value>
            <value>
                <fullName>Smart Web Info</fullName>
            </value>
            <value>
                <fullName>Dispo+Business</fullName>
            </value>
            <value>
                <fullName>All in medium</fullName>
            </value>
            <value>
                <fullName>All in basic</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>