BPER/DEVF/force-app/main/default/objects/CRM_Channel__c/fields/CRM_RelationshipStatus__c.field-meta.xml
<CustomField>
    <fullName>CRM_RelationshipStatus__c</fullName>
    <label>Relationship status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Extinguished</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>