BPER/DEVF/force-app/main/default/objects/CRM_Channel__c/fields/CRM_RequestDate__c.field-meta.xml
<CustomField>
    <fullName>CRM_RequestDate__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Request Date</label>
    <type>DateTime</type>
</CustomField>