BPER/DEVF/force-app/main/default/objects/CRM_Channel__c/fields/CRM_SCAStatus__c.field-meta.xml
<CustomField>
    <fullName>CRM_SCAStatus__c</fullName>
    <description>Stato SCA</description>
    <label>SCA Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Non-Active</fullName>
            </value>
            <value>
                <fullName>Blocked</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>