BPER/DEVF/force-app/main/default/objects/CRM_Channel__c/fields/CRM_SmartBperCardStatus__c.field-meta.xml
<CustomField>
    <fullName>CRM_SmartBperCardStatus__c</fullName>
    <description>Stato Smart BPER Card (accesso da App)</description>
    <label>Smart Bper Card Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Inactive</fullName>
            </value>
            <value>
                <fullName>Null</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>