BPER/DEVF/force-app/main/default/objects/CRM_Channel__c/fields/CRM_SmartWebEmail__c.field-meta.xml
<CustomField>
    <fullName>CRM_SmartWebEmail__c</fullName>
    <encryptionScheme>CaseInsensitiveDeterministicEncryption</encryptionScheme>
    <label>Certified email</label>
    <type>Email</type>
</CustomField>