BPER/DEVF/force-app/main/default/objects/CRM_Channel__c/fields/CRM_SmartWebPhone__c.field-meta.xml
<CustomField>
    <fullName>CRM_SmartWebPhone__c</fullName>
    <encryptionScheme>CaseInsensitiveDeterministicEncryption</encryptionScheme>
    <label>Certified Mobile Phone</label>
    <type>Phone</type>
</CustomField>