BPER/DEVF/force-app/main/default/objects/CRM_Channel__c/fields/CRM_StartDate__c.field-meta.xml
<CustomField>
    <fullName>CRM_StartDate__c</fullName>
    <description>Data attivazione</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>