BPER/DEVF/force-app/main/default/objects/CRM_Channel__c/fields/CRM_TypeofOperation__c.field-meta.xml
<CustomField>
    <fullName>CRM_TypeofOperation__c</fullName>
    <label>Type of Operation</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Contact variations</fullName>
            </value>
            <value>
                <fullName>User activation</fullName>
            </value>
            <value>
                <fullName>Password activation</fullName>
            </value>
            <value>
                <fullName>Products linked</fullName>
            </value>
            <value>
                <fullName>User extintion</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>