BPER/DEVF/force-app/main/default/objects/CRM_Channel__c/fields/CRM_UltimoAccessoMO__c.field-meta.xml
<CustomField>
    <fullName>CRM_UltimoAccessoMO__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Ultimo Accesso Smart Mobile</label>
    <type>Date</type>
</CustomField>