BPER/DEVF/force-app/main/default/objects/CRM_Channel__c/fields/CRM_UltimoAccessoSW__c.field-meta.xml
<CustomField>
    <fullName>CRM_UltimoAccessoSW__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Ultimo Accesso SmartWeb</label>
    <type>Date</type>
</CustomField>