BPER/DEVF/force-app/main/default/objects/CRM_Channel__c/fields/CRM_UltimoAccessoTB__c.field-meta.xml
<CustomField>
    <fullName>CRM_UltimoAccessoTB__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Ultimo Accesso Tablet</label>
    <type>Date</type>
</CustomField>