BPER/DEVF/force-app/main/default/objects/CRM_Channel__c/fields/CRM_UserCode__c.field-meta.xml
<CustomField>
    <fullName>CRM_UserCode__c</fullName>
    <description>Codice utenza</description>
    <encryptionScheme>CaseInsensitiveDeterministicEncryption</encryptionScheme>
    <label>User Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>