BPER/DEVF/force-app/main/default/objects/CRM_Channel__c/fields/CRM_UserCodeStatus__c.field-meta.xml
<CustomField>
    <fullName>CRM_UserCodeStatus__c</fullName>
    <label>User Code Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Suspended</fullName>
            </value>
            <value>
                <fullName>First logon</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>