BPER/DEVF/force-app/main/default/objects/CRM_Channel__c/fields/CRM_UserId__c.field-meta.xml
<CustomField>
    <fullName>CRM_UserId__c</fullName>
    <description>User id</description>
    <encryptionScheme>CaseInsensitiveDeterministicEncryption</encryptionScheme>
    <label>User Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>