BPER/DEVF/force-app/main/default/objects/CRM_Channel__c/fields/CRM_UserStatus__c.field-meta.xml
<CustomField>
    <fullName>CRM_UserStatus__c</fullName>
    <description>Stato utenza (rapporto, codice utente e password)</description>
    <label>User Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Inactive</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>