BPER/DEVF/force-app/main/default/objects/CRM_Channel__c/fields/Data_presa_visione_Blocco_operativo__c.field-meta.xml
<CustomField>
    <fullName>Data_presa_visione_Blocco_operativo__c</fullName>
    <formula>CRM_Account__r.CC_DataPresaVisione__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Data presa visione Blocco operativo</label>
    <type>DateTime</type>
</CustomField>