BPER/DEVF/force-app/main/default/objects/CRM_Channel__c/fields/Financial_Account__c.field-meta.xml
<CustomField>
    <fullName>Financial_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Prodotto finanziario</label>
    <referenceTo>FinServ__FinancialAccount__c</referenceTo>
    <relationshipName>Channel</relationshipName>
    <type>Lookup</type>
</CustomField>