BPER/DEVF/force-app/main/default/objects/CRM_Channel__c/fields/OperationStrategy__c.field-meta.xml
<CustomField>
    <fullName>OperationStrategy__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>OperationStrategy</label>
    <length>255</length>
    <type>Text</type>
</CustomField>