BPER/DEVF/force-app/main/default/objects/CRM_Channel__c/fields/Record_Type_Name__c.field-meta.xml
<CustomField>
    <fullName>Record_Type_Name__c</fullName>
    <formula>RecordType.Name</formula>
    <label>Record Type Name</label>
    <type>Text</type>
</CustomField>