BPER/DEVF/force-app/main/default/objects/CRM_Channel__c/recordTypes/Area_Riservata_BPER_Card_e_Smart_BPER_Card.recordType-meta.xml
<RecordType>
    <fullName>Area_Riservata_BPER_Card_e_Smart_BPER_Card</fullName>
    <active>true</active>
    <label>Area Riservata BPER Card e Smart BPER Card</label>
</RecordType>