BPER/DEVF/force-app/main/default/objects/CRM_Channel__c/recordTypes/Corporate_Banking.recordType-meta.xml
<RecordType>
    <fullName>Corporate_Banking</fullName>
    <active>true</active>
    <label>Corporate Banking</label>
</RecordType>