BPER/DEVF/force-app/main/default/objects/CRM_Channel__c/recordTypes/Internet_Banking.recordType-meta.xml
<RecordType>
    <fullName>Internet_Banking</fullName>
    <active>true</active>
    <label>Internet Banking</label>
</RecordType>